# sales-note-lint

./: README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: sample.txt
src/sales_note_lint/: __init__.py  __main__.py  cli.py  core.py  rules.py
tests/: test_sales_note_lint.py
